--- a/resultado-teste.html
+++ b/resultado-teste.html
@@ -3,154 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatório Oficial - SierComp4ny</title>
+    <title>Relatório SierComp4ny</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #020617; color: white; margin: 0; padding: 0; }
-        .assinatura { font-family: 'Allura', cursive; font-size: 1.0rem; color: #60a5fa; }
-        
-        /* BLOQUEIO DE SEGUNDA PÁGINA */
-        #area-pdf {
-            background-color: #020617 !important;
-            width: 794px; /* Tamanho A4 exato */
-            height: 1122px; /* Altura A4 exata */
-            margin: 0 auto;
-            position: relative;
-            overflow: hidden; /* Corta qualquer sobra que geraria 2ª página */
-            box-sizing: border-box;
-            padding: 40px;
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
+        /* Updated signature font and style */
+        .assinatura {
+            font-family: 'Allura', cursive;
+            font-size: 1.5rem; /* Increased font size */
+            color: #1e3a8a; /* Dark blue color */
+            transform: rotate(-2deg);
+            line-height: 1;
         }
-        .no-print { display: flex; justify-content: center; margin: 20px 0; }
+        .marca-dagua {
+            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(-45deg);
+            font-size: 80px; color: rgba(0,0,0,0.03); font-weight: 900; white-space: nowrap; pointer-events: none;
+        }
     </style>
-</head>
-<body>
-
-    <div id="area-pdf">
-        <div class="flex justify-between items-start border-b border-slate-800 pb-6 mb-8">
-            <div>
-                <h1 class="text-2xl font-black tracking-widest text-blue-500">SIERCOMP4NY</h1>
-                <p class="text-[10px] text-slate-500 uppercase tracking-widest mt-1">
-                    Intelligence & <span class="text-orange-500 font-bold">Sier Growth</span>
-                </p>
-            </div>
-            <div class="text-right">
-                <p class="text-[9px] opacity-60 uppercase tracking-widest">Relatório Confidencial</p>
-                <p id="data-hoje" class="text-[10px] font-mono text-slate-400">--/--/----</p>
-            </div>
-        </div>
-
-        <div class="text-center mb-8">
-            <span class="bg-blue-900/40 text-blue-400 text-[10px] font-bold px-4 py-1 rounded-full border border-blue-500/30 uppercase tracking-widest">Resultado da Análise</span>
-            <h2 id="titulo-perfil" class="text-4xl font-black text-white mt-6 mb-2 uppercase">---</h2>
-            <p id="subtitulo-perfil" class="text-blue-400 italic text-lg">---</p>
-        </div>
-
-        <div class="flex justify-center gap-10 mb-10">
-            <div class="bg-slate-900/50 border border-slate-800 p-6 rounded-3xl text-center w-36">
-                <p class="text-[10px] text-slate-500 uppercase font-bold mb-2">Razão (QI)</p>
-                <div class="text-4xl font-black text-blue-500"><span id="score-qi">0</span><span class="text-sm text-slate-700">/10</span></div>
-            </div>
-            <div class="bg-slate-900/50 border border-slate-800 p-6 rounded-3xl text-center w-36">
-                <p class="text-[10px] text-slate-500 uppercase font-bold mb-2">Emoção (QE)</p>
-                <div class="text-4xl font-black text-purple-500"><span id="score-qe">0</span><span class="text-sm text-slate-700">/10</span></div>
-            </div>
-        </div>
-
-        <div class="space-y-6 mb-10 px-6">
-            <div class="flex gap-4">
-                <span class="text-3xl">👁️</span>
-                <div>
-                    <h3 class="font-bold text-sm text-white uppercase tracking-wide">O que ninguém vê em você</h3>
-                    <p id="texto-analise" class="text-[12px] text-slate-400 leading-relaxed mt-1 text-justify">---</p>
-                </div>
-            </div>
-            <div class="flex gap-4">
-                <span class="text-3xl">🚀</span>
-                <div>
-                    <h3 class="font-bold text-sm text-white uppercase tracking-wide">Seu Potencial Máximo</h3>
-                    <p id="texto-potencial" class="text-[12px] text-slate-400 leading-relaxed mt-1 text-justify">---</p>
-                </div>
-            </div>
-            <div class="bg-blue-900/20 border-l-4 border-orange-500 p-4 rounded-r-xl">
-                <h3 class="font-bold text-blue-400 text-[10px] mb-1 uppercase tracking-widest flex items-center">
-                    <span class="mr-2">⚡</span> Sua Ação Imediata
-                </h3>
-                <p id="texto-acao" class="text-xs text-blue-100 italic">---</p>
-            </div>
-        </div>
-
-        <div class="absolute bottom-12 left-0 w-full text-center px-10">
-            <div class="border-t border-slate-800 pt-6">
-                <p class="text-[9px] text-slate-600 uppercase tracking-[0.3em] mb-1">Certificamos a análise de:</p>
-                <h4 id="nome-cliente" class="text-3xl font-bold text-white mb-6 capitalize">---</h4>
-                
-                <div class="flex flex-col items-center">
-                    <div class="assinatura">Anderson Dias</div>
-                    <div class="h-px w-32 bg-slate-700 my-2"></div>
-                    <p class="text-[8px] text-slate-500 uppercase tracking-widest">
-                        Dias Anderson • Founder & Lead Developer Sier Growth
-                    </p>
-                    <p class="text-[8px] font-mono text-slate-800 mt-2">ID: <span id="txid-display">---</span></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="no-print">
-        <button onclick="baixarRelatorio()" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-12 rounded-full shadow-2xl transition-all">
-            📥 BAIXAR RELATÓRIO PDF
-        </button>
-    </div>
-
-    <script>
-        // Configurações e Perfis (IDÊNTICOS AO SEU ORIGINAL)
-        const SUPABASE_URL = "https://oabcppkojfmmmqhevjpq.supabase.co"; 
-        const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9hYmNwcGtvamZtbW1xaGV2anBxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzMTE2ODEsImV4cCI6MjA4NTg4NzY4MX0.b2OlaVmawuwC34kXhLwbJMm6hnPsO7Hng0r8_AHjwhw"; 
-
-        const PERFIS = {
-            "Potência Expansiva": { titulo: "O Visionário", sub: "Mestre em Estratégia Híbrida", analise: "Você processa dados frios sem perder o tato humano. Onde a maioria vê problemas, você enxerga o sistema inteiro.", potencial: "Pense em Steve Jobs: ele vendia sonhos e status, não apenas máquinas.", acao: "Sua mente vale ouro na estratégia. Delegue o operacional agora." },
-            "Executor Solitário": { titulo: "O Estrategista", sub: "Alta Performance Lógica", analise: "Sua mente é uma máquina de resolver problemas com frieza cirúrgica.", potencial: "Liderança técnica ou consultoria de alto nível.", acao: "Treine um braço direito imediatamente. Não centralize tudo." },
-            "Conector Nato": { titulo: "O Diplomata", sub: "Inteligência Social Superior", analise: "Você lê ambientes e pessoas com facilidade extrema. Sua força é a influência.", potencial: "Negociação estratégica e liderança de cultura corporativa.", acao: "Use ferramentas de gestão. O carisma abre portas, a disciplina as mantém abertas." },
-            "Em Construção": { titulo: "Explorador", sub: "Fase de Recalibragem", analise: "Sua inteligência detectou inconsistências produtivas. Você está absorvendo novos conhecimentos.", potencial: "Vasto, mas exige foco em autoconhecimento.", acao: "Tente novamente focado na sua dor principal. Não se disperse." }
-        };
-
-        async function init() {
-            try {
-                const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-                const txid = new URLSearchParams(window.location.search).get('txid');
-                if (!txid) return;
-                const { data } = await supabase.from('leads').select('*').eq('txid', txid).single();
-                if (data) {
-                    document.getElementById('nome-cliente').innerText = data.nome;
-                    document.getElementById('score-qi').innerText = data.qi_score || 0;
-                    document.getElementById('score-qe').innerText = data.qe_score || 0;
-                    document.getElementById('txid-display').innerText = txid.slice(0, 8).toUpperCase();
-                    document.getElementById('data-hoje').innerText = new Date().toLocaleDateString('pt-BR');
-                    const qi = data.qi_score || 0, qe = data.qe_score || 0;
-                    let p = (qi > 6 && qe > 6) ? "Potência Expansiva" : (qi > 6) ? "Executor Solitário" : (qe > 6) ? "Conector Nato" : "Em Construção";
-                    const txt = PERFIS[p];
-                    document.getElementById('titulo-perfil').innerText = txt.titulo;
-                    document.getElementById('subtitulo-perfil').innerText = txt.sub;
-                    document.getElementById('texto-analise').innerText = txt.analise;
-                    document.getElementById('texto-potencial').innerText = txt.potencial;
-                    document.getElementById('texto-acao').innerText = txt.acao;
-                }
-            } catch (e) {}
-        }
-
-        function baixarRelatorio() {
-            const opt = {
-                margin: 0, filename: 'Relatorio_Sier.pdf',
-                image: { type: 'jpeg', quality: 1 },
-                html2canvas: { scale: 2, useCORS: true, backgroundColor: '#020617' },
-                jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-            };
-            html2pdf().set(opt).from(document.getElementById('area-pdf')).save();
-        }
-        init();
-    </script>
-</body>
-</html>
