--- a/index-teste.html
+++ b/index-teste.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
     <style>
         body { font-family: 'Inter', sans-serif; background-color: #020617; color: white; }
         .card-quiz { background: #0f172a; border: 1px solid #1e293b; border-radius: 24px; box-shadow: 0 20px 50px rgba(0,0,0,0.5); }
