--- a/index-teste.html
+++ b/index-teste.html
@@ -22,7 +22,7 @@
     <div class="w-full max-w-md">
         <div id="tela-inicio" class="card-quiz p-8 text-center">
             <h1 class="text-2xl font-black text-blue-500 mb-1 uppercase">Sier Growth</h1>
-            <p class="text-[10px] text-slate-500 uppercase tracking-[0.2em] mb-8 italic font-semibold">Intelligence Engine v2.0</p>
+            <p class="text-[10px] text-slate-500 uppercase tracking-[0.2em] mb-8 italic font-semibold text-center">Intelligence Engine v2.0</p>
             
             <div class="space-y-4">
                 <input type="text" id="nome-usuario" placeholder="Nome Completo" class="w-full p-4 rounded-xl bg-slate-900 border border-slate-800 focus:border-blue-500 outline-none text-sm text-white">
@@ -30,12 +30,12 @@
                 <input type="tel" id="whatsapp-usuario" placeholder="WhatsApp (DDD)" class="w-full p-4 rounded-xl bg-slate-900 border border-slate-800 focus:border-blue-500 outline-none text-sm text-white">
                 <button onclick="_quizApp.iniciar()" class="w-full bg-blue-600 hover:bg-blue-700 py-4 rounded-xl font-extrabold text-lg shadow-lg">Iniciar Avaliação</button>
             </div>
-            <button onclick="localStorage.clear(); location.reload();" class="mt-8 text-[9px] text-slate-700 uppercase tracking-widest hover:text-slate-400">Limpar Sessão (Reset)</button>
+            <button onclick="localStorage.clear(); location.reload();" class="mt-8 text-[9px] text-slate-700 uppercase tracking-widest hover:text-slate-400">Limpar Cache de Sessão (Reset)</button>
         </div>
 
         <div id="tela-perguntas" class="card-quiz p-6 hidden">
             <div class="barra-progresso mb-4"><div id="barra-progresso" class="progresso-fill"></div></div>
-            <div class="flex justify-between text-[10px] text-slate-500 font-bold mb-6 uppercase tracking-widest">
+            <div class="flex justify-between text-[10px] text-slate-500 font-bold mb-6 uppercase tracking-widest text-center">
                 <span>PERGUNTA <span id="num-pergunta">1</span>/20</span>
                 <span class="text-blue-500 italic">Neuro-Análise</span>
             </div>
@@ -44,8 +44,8 @@
         </div>
 
         <div id="tela-pagamento" class="card-quiz p-8 text-center hidden">
-            <h2 class="text-2xl font-black text-green-500 mb-2 italic uppercase">Análise Pronta!</h2>
-            <p class="text-slate-400 text-sm mb-10 font-medium">Escolha como deseja liberar seu relatório:</p>
+            <h2 class="text-2xl font-black text-green-500 mb-2 italic uppercase text-center">Análise Pronta!</h2>
+            <p class="text-slate-400 text-sm mb-10 font-medium text-center">Escolha como deseja liberar seu relatório:</p>
             <div id="opcoes-liberacao" class="space-y-4">
                 <button onclick="_quizApp.gerarPix()" class="w-full bg-emerald-600 p-4 rounded-2xl font-black shadow-lg">PAGAR R$ 1,00 VIA PIX</button>
                 <button onclick="_quizApp.verAnuncio()" class="w-full bg-slate-800 p-4 rounded-2xl font-bold text-blue-400 text-xs border border-slate-700">ASSISTIR VÍDEO (GRÁTIS NO APP)</button>
@@ -121,7 +121,6 @@
                 areaQr.classList.remove('hidden');
                 qrContent.innerHTML = `<div class="p-8 text-slate-800 font-bold animate-pulse text-xs">A GERAR PIX...</div>`;
 
-                // SIMULAÇÃO - AQUI DEVES CONECTAR A TUA API NO FUTURO
                 setTimeout(() => {
                     const d = {
                         img: "https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=PIX_ANDERSON_DIAS",
@@ -129,13 +128,13 @@
                     };
 
                     qrContent.innerHTML = `
-                        <img src="${d.img}" class="w-48 h-48 rounded-xl mb-4">
-                        <p class="text-[9px] text-slate-400 font-bold uppercase mb-2">Código Copia e Cola:</p>
-                        <textarea class="w-full text-[9px] text-slate-600 p-3 bg-slate-50 border rounded-lg mb-4" rows="2" readonly>${d.code}</textarea>
-                        <button onclick="navigator.clipboard.writeText('${d.code}');alert('Pix Copiado!')" class="w-full bg-blue-600 text-white py-3 rounded-xl text-[10px] font-black uppercase">Copiar Código</button>
+                        <img src="${d.img}" class="w-48 h-48 rounded-xl mb-4 mx-auto">
+                        <p class="text-[9px] text-slate-400 font-bold uppercase mb-2 text-center">Código Copia e Cola:</p>
+                        <textarea class="w-full text-[9px] text-slate-600 p-3 bg-slate-50 border rounded-lg mb-4 text-center" rows="2" readonly>${d.code}</textarea>
+                        <button onclick="navigator.clipboard.writeText('${d.code}');alert('Pix Copiado!')" class="w-full bg-blue-600 text-white py-3 rounded-xl text-[10px] font-black uppercase text-center shadow-md">Copiar Código</button>
                         <div class="flex items-center justify-center gap-2 mt-4">
                             <div class="w-2 h-2 bg-emerald-500 rounded-full animate-ping"></div>
-                            <span class="text-[9px] text-emerald-600 font-bold uppercase tracking-widest">Aguardando Pagamento</span>
+                            <span class="text-[9px] text-emerald-600 font-bold uppercase tracking-widest text-center">Aguardando Pagamento</span>
                         </div>
                     `;
                     localStorage.setItem('neuro_pix_img', d.img);
@@ -157,21 +156,10 @@
 
         window.onload = () => {
             const pixImg = localStorage.getItem('neuro_pix_img');
-            const pixCode = localStorage.getItem('neuro_pix_code');
-            if (pixImg && pixCode) {
+            // Só recupera se o QR Code já tiver sido gerado de fato
+            if (pixImg && pixImg !== "exemplo_img") {
                 _quizApp.mostrarTela('tela-pagamento');
-                document.getElementById('opcoes-liberacao').classList.add('hidden');
-                document.getElementById('area-qr').classList.remove('hidden');
-                document.getElementById('qr-content').innerHTML = `
-                    <img src="${pixImg}" class="w-48 h-48 rounded-xl mb-4">
-                    <p class="text-[9px] text-slate-400 font-bold uppercase mb-2">Código Copia e Cola:</p>
-                    <textarea class="w-full text-[9px] text-slate-600 p-3 bg-slate-50 border rounded-lg mb-4" rows="2" readonly>${pixCode}</textarea>
-                    <button onclick="navigator.clipboard.writeText('${pixCode}');alert('Pix Copiado!')" class="w-full bg-blue-600 text-white py-3 rounded-xl text-[10px] font-black uppercase">Copiar Código</button>
-                    <div class="flex items-center justify-center gap-2 mt-4">
-                        <div class="w-2 h-2 bg-emerald-500 rounded-full animate-ping"></div>
-                        <span class="text-[9px] text-emerald-600 font-bold uppercase tracking-widest">Sessão Recuperada</span>
-                    </div>
-                `;
+                _quizApp.gerarPix();
             }
         };
     </script>
